# blog

./: .gitignore  Cargo.toml  Dioxus.toml
public/: styles.css
src/: app.rs  main.rs  routes.rs
src/components/: header.rs  mod.rs  post_preview.rs  preview.rs  syntax.rs
src/data/: categories.rs  mod.rs  pages.rs  posts.rs  themes.rs
src/pages/: category.rs  home.rs  mod.rs  page.rs  post.rs
