[package]
name = "blog"
version = "0.1.0"
edition = "2021"

[dependencies]
dioxus = { version = "0.6.0", features = ["web", "router"] }
lazy_static = "1.5.0"
regex = "1.11.1"

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
