[package]
name = "blog"
version = "0.1.0"
edition = "2021"

[dependencies]
dioxus = { version = "0.6.0", features = ["web", "router"] }
pulldown-cmark = { version = "0.13.0" }
regex = { version = "1.11.1" }

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
